# labedata

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  app.py  main.py  pyproject.toml  wsgi.py
app/: app.py  config.py  forms.py  views.py
app/db/: storage.py
app/templates/: index.html  layout.html
labedata/: __init__.py  app.py  auth.py  config.py  dataset.py  forms.py  index.py
labedata/db/: __init__.py  models.py  schema.sql
labedata/models/: _csv_dataset.py  _dataset.py  csv_dataset.py  dataset.py  dataset_factory.py  user.py
labedata/static/js/: common.js
labedata/templates/: dataset.html  dataset_entity.html  dataset_new.html  index.html  layout.html  message.html
labedata/templates/auth/: login.html  register.html
labedata/templates/processing/: dataset.html  dataset_entity.html  dataset_new.html
static/css/: main.css
templates/: index.html
