[tool.poetry]
name = "labedata"
version = "0.2.0"
description = "Self-hosted data labeling stub"
authors = ["Max Ermakov <maksim_ermakov@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
pandas = "^1.2.4"
python-dotenv = "^0.17.0"
WTForms = "^2.3.3"
python-slugify = "^5.0.2"
Flask-WTF = "^0.14.3"
email-validator = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
